@@ -36,7 +36,8 @@ class BzfKeyMap {
 			SendRecipient,
 			Jump,
 			Binoculars,
-			Score,
+                        Score,
+                        Labels,
 			FlagHelp,
 			TimeForward,
 			TimeBackward,
